Improve succes/failure colors

--- a/webui/src/index.css
+++ b/webui/src/index.css
@@ -5,10 +5,10 @@ body {
 }
 
 .success {
-  background-color: #00d700;
+  background-color: #80f580;
 }
 
 .failure {
-  background-color: #f71000;
+  background-color: #f58080;
 }
 
